2008-05-09  Sam Steingold  <sds@gnu.org>

	* condition.lisp (coerce-to-condition): use INVOKE-DEBUGGER instead
	of SIGNAL to report TYPE-ERROR so that COERCE-TO-CONDITION never
	returns NIL (http://article.gmane.org/gmane.lisp.clisp.general/12208)

2008-05-09  Sam Steingold  <sds@gnu.org>

	* trace.lisp (trace, untrace): turn comments into doc strings

2008-05-08  Sam Steingold  <sds@gnu.org>

	* modules/syscalls/configure.in: check size of pid_t
	* modules/syscalls/calls.c (GETTER, SETTER): move up in file
	(pid_to_I, I_to_pid): define based on SIZEOF_PID_T
	(GETSID, SETPGRP, SETPGID, KILL): use the above
	(GETTER1): add
	(GETSID): use it
	(SETPGID): replace with POSIX::%SETPGID
	(GETPGID): add
	* modules/syscalls/posix.lisp (GETPGID): add DEFSETF

2008-05-07  Sam Steingold  <sds@gnu.org>

	* version.sh: 2.45 (2008-05-15)

2008-05-07  Sam Steingold  <sds@gnu.org>

	* m4/ffcall.m4 (CL_FFCALL): suggest passing --host=... to the
	FFCALL configure if $ac_cv_build != $ac_cv_host

2008-05-07  Sam Steingold  <sds@gnu.org>

	* configure: accept --cbc to mean Configure/Build/Check and
	--build to mean the build host (the usual autoconf meaning)
	* makemake.in: rely on configure for cross-compilation too
	(EXTRAOBJ) [CROSS]: add gllib/malloc

2008-05-07  Sam Steingold  <sds@gnu.org>

	* makemake.in (MYIMPROOT): use beta pages for the latest id-href.map
	(check-doc): use base, not boot, for better symbol coverage

2008-05-07  Sam Steingold  <sds@gnu.org>

	* describe.lisp (describe-object@symbol) [FFI]:
	print foreign type information

2008-05-07  Sam Steingold  <sds@gnu.org>

	* makemake.in (encflags): ' -E UTF-8 -Epathname 1:1':
	UTF-8 for files, terminal, wildcard test
	1:1 for pathname

2008-05-07  Reini Urban  <rurban@x-ray.at>

	* modules/syscalls/calls.c (FMTID_SummaryInformation)
	(FMTID_UserDefinedProperties): enable also on UNIX_CYGWIN32

2008-05-07  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1959436 ]: Allow ending http_proxy with a slash