@@ -44,12 +44,12 @@ to print the corresponding values, or T for all of them.")
 
 (defun apropos (string &optional (package nil))
   (dolist (sym (apropos-list string package))
-    (format t "~&~s~40t" sym)
+    (format t "~&~S~40t" sym)
     (when (fboundp sym)
       #1=(write-string "   ")   ; spacer
       (write-string (fbound-string sym))
       (when (apropos-do-more :function)
-        (format t " [~s]" (fdefinition sym))))
+        (format t " [~S]" (fdefinition sym))))
     (when (symbol-macro-expand sym)
       #1# (write-string (TEXT "symbol-macro")))
     (when (boundp sym)
@@ -57,18 +57,18 @@ to print the corresponding values, or T for all of them.")
             (write-string (TEXT "constant"))
             (write-string (TEXT "variable")))
       (when (apropos-do-more :variable)
-        (format t " [~s]" (symbol-value sym))))
+        (format t " [~S]" (symbol-value sym))))
     (let ((type (or (get sym 'system::type-symbol)
                     (get sym 'system::defstruct-description))))
       (when type
         #1# (write-string (TEXT "type"))
         (when (apropos-do-more :type)
-          (format t " [~s]" type))))
+          (format t " [~S]" type))))
     (let ((class (get sym 'clos::closclass)))
       (when class
         #1# (write-string (TEXT "class"))
         (when (apropos-do-more :class)
-          (format t " [~s]" class))))
+          (format t " [~S]" class))))
     (elastic-newline))
   (values))
 
@@ -345,7 +345,7 @@ to print the corresponding values, or T for all of them.")
         (let ((doc (documentation obj ty)))
           (when doc
             (terpri stream)
-            (format stream (TEXT "Documentation as a ~a:") ty)
+            (format stream (TEXT "Documentation as a ~A:") ty)
             (terpri stream)
             (princ doc stream))))
       (launch-doc obj 'ext::clhs ; change to sys::clhs when ext:clhs is finally removed
@@ -358,7 +358,7 @@ to print the corresponding values, or T for all of them.")
                 moree))
       (dolist (zz (nreverse mored)) (describe zz stream))))
   (:method ((obj integer) (stream stream))
-    (format stream (TEXT "an integer, uses ~S bit~:p, is represented as a ~:[bignum~;fixnum~].")
+    (format stream (TEXT "an integer, uses ~S bit~:P, is represented as a ~:[bignum~;fixnum~].")
             (integer-length obj) (sys::fixnump obj)))
   (:method ((obj ratio) (stream stream))
     (format stream (TEXT "a rational, not integral number.")))
@@ -414,7 +414,7 @@ to print the corresponding values, or T for all of them.")
                 (package-name obj))
         (let ((nicknames (package-nicknames obj)))
           (when nicknames
-            (format stream (TEXT ". It has ~:d nickname~:p ~{~A~^, ~}")
+            (format stream (TEXT ". It has ~:D nickname~:P ~{~A~^, ~}")
                     (length nicknames) nicknames)))
         (format stream (TEXT "."))
         (let ((use-list (package-use-list obj))
@@ -422,19 +422,19 @@ to print the corresponding values, or T for all of them.")
           (terpri stream)
           (format stream (TEXT "It "))
           (when use-list
-            (format stream (TEXT "imports the external symbols of ~:d package~:p ~{~A~^, ~} and ")
+            (format stream (TEXT "imports the external symbols of ~:D package~:P ~{~A~^, ~} and ")
                     (length use-list)
                     (mapcar #'package-name use-list)))
           (let ((L nil) (count 0)) ; maybe list all exported symbols
             (do-external-symbols (s obj) (push s L) (incf count))
             (format stream
-                    (TEXT "exports ~[no symbols~:;~:*~:d symbol~:p~]")
+                    (TEXT "exports ~[no symbols~:;~:*~:D symbol~:P~]")
                     count)
             (when (zerop *describe-nesting*)
               (format stream (TEXT "~{ ~S~^,~}")
                       (sort L #'string< :key #'symbol-name))))
           (if used-by-list
-            (format stream (TEXT " to ~:d package~:p ~{~A~^, ~}")
+            (format stream (TEXT " to ~:D package~:P ~{~A~^, ~}")
                     (length used-by-list)
                     (mapcar #'package-name used-by-list))
             (format stream (TEXT ", but no package uses these exports")))
@@ -592,7 +592,7 @@ to print the corresponding values, or T for all of them.")
           (format stream (TEXT "Documentation:"))
           (do ((tail doc (cddr tail)))
               ((endp tail))
-            (format stream "~&~s:~%~s" (car tail) (cadr tail)))
+            (format stream "~&~S:~%~S" (car tail) (cadr tail)))
           (fresh-line stream)))))
   (finish-output stream))
 
@@ -663,7 +663,7 @@ to print the corresponding values, or T for all of them.")
     (assert (probe-file
              (setq path (merge-pathnames
                          name (merge-pathnames data *lib-directory*))))
-            (*lib-directory*) "~s: file ~s does not exist - adjust ~s"
+            (*lib-directory*) (TEXT "~S: file ~S does not exist - adjust ~S")
             'clisp-data-file path '*lib-directory*)
     path))
 
